<resources>

    <string name="app_name">Locsy</string>
    <string name="loading">loading</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_service">Start Location Service</string>
    <string name="menu_stop_service">Stop Location Service</string>
    <string name="info_location_service_started">Locsy started to send your location</string>
    <string name="info_location_service_stopped">Locsy stopped sending your location</string>
    <string name="title_activity_main">Locsy</string>
    <string name="pref_key_username">pref_key_username</string>
	<string name="pref_username">Username</string>
	<string name="pref_description_username">The user id you use to register at the location server</string>
	<string name="pref_key_password">pref_key_password</string>
	<string name="pref_password">Password</string>
	<string name="pref_description_password">The password you use to register at the location server</string>
	<string name="pref_key_server_address">pref_key_server_address</string>
	<string name="pref_server_address">Server Address</string>
	<string name="pref_description_server_address">Enter the server address provided by your administrator</string>
	<string name="pref_key_update_interval">pref_key_update_interval</string>
	<string name="pref_update_interval">Update Interval</string>
	<string name="pref_description_update_interval">The location update interval in seconds</string>
	<string name="log_header">Log:</string>
	<string name="menu_show_hide_log">Show/hide log</string>
    <string name="location_updated">Locations loaded successfully.</string>
    <string name="location_update_error">Could not load locations. Please check your internet connection.</string>
    <string name="my_location">My Location</string>
    <string name="your_location">Your location</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading_locations">Receiving your and your friends locations.</string>
    <string name="could_not_receive_locations">Could not receive locations.</string>
    <string name="was_here_at" formatted="false">%s was here at %s</string>
    <string name="time_formatter">H:mm aaa</string>
</resources>