<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_start_service"
        android:title="@string/menu_start_service"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="1"
        android:showAsAction="never" />
    <item android:id="@+id/menu_stop_service"
        android:title="@string/menu_stop_service"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences" />
    <item android:id="@+id/menu_show_hide_log"
        android:visible="false"
        android:title="@string/menu_show_hide_log"
        android:orderInCategory="4"
        android:showAsAction="never"
        />
</menu>
